[web] fixed spacing for messagebox

--- a/public/css/kanku/mystyle.css
+++ b/public/css/kanku/mystyle.css
@@ -3,12 +3,13 @@
   padding: 0.75rem 1.25rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  margin-bottom: 0.1rem;
 }
 
 
 .top_pager {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 #content {
   padding-top: 60px;
